src/test/ui/array-slice-vec/match_arr_unknown_len.stderr
error[E0308]: mismatched types
  --> $DIR/match_arr_unknown_len.rs:3:9
   |
LL |         [1, 2] => true,
   |         ^^^^^^ expected `2`, found `N`
   |
   = note: expected array `[u32; 2]`
              found array `[u32; N]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
